[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Enemies/MMDG-7.png.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/Enemy_7.gd" type="Script" id=2]
[ext_resource path="res://SFX/Sound effects Pack 2/Sound effects Pack 2/Coins/WAV/Coins 3 - Sound effects Pack 2.wav" type="AudioStream" id=3]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.4956, 15.3551 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.4426, 17.9059 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.5229, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 85.6741, 77.3498 )

[node name="Enemy_7_Root" type="Node2D"]
scale = Vector2( 3, 3 )

[node name="Enemy_7_KinematicBody" type="KinematicBody2D" parent="."]
scale = Vector2( 0.6, 0.6 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Player_Direction" type="RayCast2D" parent="Enemy_7_KinematicBody"]
scale = Vector2( 1.42857, 1.42857 )
collision_mask = 4

[node name="Enemy_7_Sprite" type="Sprite" parent="Enemy_7_KinematicBody"]
texture = ExtResource( 1 )

[node name="Enemy_7_Col_Body" type="CollisionShape2D" parent="Enemy_7_KinematicBody"]
shape = SubResource( 1 )

[node name="Enemy_7_Hit" type="Area2D" parent="Enemy_7_KinematicBody"]
collision_layer = 2
collision_mask = 4

[node name="Enemy_7_Col_Hit" type="CollisionShape2D" parent="Enemy_7_KinematicBody/Enemy_7_Hit"]
shape = SubResource( 2 )

[node name="Enemy_Hit_SFX" type="AudioStreamPlayer" parent="Enemy_7_KinematicBody/Enemy_7_Hit"]
stream = ExtResource( 3 )

[node name="Enemy_7_Visibility" type="VisibilityNotifier2D" parent="Enemy_7_KinematicBody"]
scale = Vector2( 1.87713, 1.95068 )

[node name="Enemy_7_Wall_FOV" type="Area2D" parent="Enemy_7_KinematicBody"]
collision_layer = 2
collision_mask = 3

[node name="Enemy_7_Wall_Col" type="CollisionShape2D" parent="Enemy_7_KinematicBody/Enemy_7_Wall_FOV"]
scale = Vector2( 1.28002, -3.57743 )
shape = SubResource( 3 )

[node name="Enemy_7_FOV" type="Area2D" parent="Enemy_7_KinematicBody"]
scale = Vector2( 1.31428, 0.470555 )
collision_layer = 2
collision_mask = 4

[node name="Enemy_7_FOV_Col" type="CollisionShape2D" parent="Enemy_7_KinematicBody/Enemy_7_FOV"]
scale = Vector2( 1, 1.01324 )
shape = SubResource( 4 )
[connection signal="area_entered" from="Enemy_7_KinematicBody/Enemy_7_Hit" to="Enemy_7_KinematicBody" method="_on_Enemy_7_Hit_area_entered"]
[connection signal="body_entered" from="Enemy_7_KinematicBody/Enemy_7_Wall_FOV" to="Enemy_7_KinematicBody" method="_on_Enemy_7_Wall_FOV_body_entered"]
[connection signal="body_entered" from="Enemy_7_KinematicBody/Enemy_7_FOV" to="Enemy_7_KinematicBody" method="_on_Enemy_7_FOV_body_entered"]
